updated workshop and sponsors section

--- a/index.html
+++ b/index.html
@@ -765,6 +765,12 @@
               <h1>Our Sponsors</h1>
               <div class="sponsors">
                 <div class="sponsor-category">
+                  <h2>Title Sponsors</h2>
+                  <div class="sponsor-row">
+                    <img src="http://pngimg.com/uploads/github/github_PNG20.png" />
+                  </div>
+                </div>
+                <div class="sponsor-category">
                   <h2>Platinum Sponsors</h2>
                   <div class="sponsor-row">
                     <img
@@ -773,10 +779,15 @@
                     <img
                       src="https://hackofiesta.github.io/assets/images/sponsor-logo-2.png"
                     />
-                    <img src="https://getsetfoss.tech/assets/img/code.png" />
                     <img
                       src="https://hackofiesta.github.io/assets/images/axios.png"
                     />
+                  </div>
+                </div>
+                <div class="sponsor-category">
+                  <h2>Silver Sponsors</h2>
+                  <div class="sponsor-row">
+                    <img src="assets/img/microsoft.jpg" />
                   </div>
                 </div>
                 <div class="sponsor-category">
@@ -788,6 +799,7 @@
                     <img
                       src="https://hackofiesta.github.io/assets/images/sponsor-logo-4.png"
                     />
+                    <img src="assets/img/dsciitl.png" />
                     <img
                       src="https://static.balsamiq.cloud/1345/landing/images/2bcadf409f1d0ebd680e0f127db3aea4.svg"
                       style="background-color: #df0000;padding: 10px;border-radius: 15px;"
