--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -82,33 +82,56 @@
       <div
         style="padding-top: 8%;padding-bottom: 4%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
         class="sponsor-category">
-        <h2 style="color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);">Platinum
+        <h2 style=" text-align: center; color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);"> Title
+          Sponsors</h2><br>
+        <div class="sponsor-row">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="http://pngimg.com/uploads/github/github_PNG20.png">
+        </div><br>
+      </div>
+      <br>
+      <div
+        style="padding-top: 8%;padding-bottom: 4%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+        class="sponsor-category">
+        <h2 style="text-align: center; color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);">Platinum
           Sponsors</h2>
         <div class="sponsor-row">
           <img style="width: 50%; position: relative;left: 50%; transform: translate(-50%);"
             src="https://hackofiesta.github.io/assets/images/sponsor-logo-1.png">
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
-            src="https://hackofiesta.github.io/assets/images/sponsor-logo-2.png">
-          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
-            src="https://getsetfoss.tech/assets/img/code.png">
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-2.png"><br><br>
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
             src="https://hackofiesta.github.io/assets/images/axios.png">
         </div>
       </div>
-      <br><br>
-      <div style="padding-top: 8%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+      <br>
+      <div
+        style="padding-top: 8%;padding-bottom: 4%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
         class="sponsor-category">
         <h2
-          style="margin-top:-7%; color: #303033;width: 50%; position: relative;left: 45%; transform: translate(-50%);">
+          style=" text-align: center; color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);">
+          Silver
+          Sponsors</h2><br>
+        <div class="sponsor-row">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="../assets/img/microsoft.jpg">
+        </div><br>
+      </div>
+      <br>
+      <div style="padding-top: 8%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+        class="sponsor-category"><br>
+        <h2
+          style=" text-align: center; margin-top:-7%; color: #303033;width: 50%; position: relative;left: 45%; transform: translate(-50%);">
           Patreon Sponsors</h2>
         <div class="sponsor-row">
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
             src="https://hackofiesta.github.io/assets/images/sponsor-logo-3.png">
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
-            src="https://hackofiesta.github.io/assets/images/sponsor-logo-4.png">
-          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
-            src="https://static.balsamiq.cloud/1345/landing/images/2bcadf409f1d0ebd680e0f127db3aea4.svg"
-            style="background-color: #df0000;padding: 10px;border-radius: 15px;">
+            src="https://hackofiesta.github.io/assets/images/sponsor-logo-4.png"><br><br>
+            <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
+            src="../assets/img/dsciitl.png"><br><br>
+          <img src="https://static.balsamiq.cloud/1345/landing/images/2bcadf409f1d0ebd680e0f127db3aea4.svg"
+            style="background-color: #df0000;padding: 10px;border-radius: 15px; width: 50%; position: relative;left: 50%;transform: translate(-50%);" /><br><br>
         </div>
       </div>
     </div>
@@ -116,7 +139,7 @@
 </div>
 
 
-
+<br><br>
 
 <footer class="site-footer">
   <div class="container">
