--- a/mobile/workshop.html
+++ b/mobile/workshop.html
@@ -201,7 +201,8 @@
           <hr>
         </div>
         <div class="items price">
-          <p class="new">Timings</p>
+          <p class="new">18 JANUARY 2020</p>
+          <p class="new">11.00 AM</p>
         </div>
         <div class="items cart">
           <i class="fas fa-info" aria-hidden="true"></i>
@@ -217,7 +218,8 @@
           <hr>
         </div>
         <div class="items price">
-          <p class="new">Timings</p>
+          <p class="new">18 JANUARY 2020</p>
+        <p class="new">11.00 AM</p>
         </div>
         <div class="items cart">
           <i class="fas fa-info" aria-hidden="true"></i>
@@ -233,7 +235,8 @@
           <hr>
         </div>
         <div class="items price">
-          <p class="new">Timings</p>
+          <p class="new">18 JANUARY 2020</p>
+          <p class="new">11.00 AM</p>
         </div>
         <div class="items cart">
           <i class="fas fa-info" aria-hidden="true"></i>
