workshop partner added

--- a/index.html
+++ b/index.html
@@ -789,6 +789,11 @@
                   <div class="sponsor-row">
                     <img src="assets/img/microsoft.jpg" />
                   </div>
+                </div><div class="sponsor-category">
+                  <h2>Workshop Partner</h2>
+                  <div class="sponsor-row">
+                    <img src="assets/img/workshops/vanhaa.png" />
+                  </div>
                 </div>
                 <div class="sponsor-category">
                   <h2>Patreon Sponsors</h2>
