--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -118,6 +118,18 @@
         </div><br>
       </div>
       <br>
+      <div
+        style="padding-top: 8%;padding-bottom: 4%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
+        class="sponsor-category">
+        <h2
+          style=" text-align: center; color: #303033; width: 50%; position: relative;left: 45%; transform: translate(-50%);">
+          Workshop
+          &nbsp;&nbsp;Partner</h2><br>
+        <div class="sponsor-row">
+          <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);" src="../assets/img/workshops/vanhaa.png">
+        </div><br>
+      </div>
+      <br>
       <div style="padding-top: 8%;border-radius:15px;background-color: white; background-size: cover; width: 100%;"
         class="sponsor-category"><br>
         <h2
