--- a/index.html
+++ b/index.html
@@ -787,9 +787,11 @@
                 <div class="sponsor-category">
                   <h2>Silver Sponsors</h2>
                   <div class="sponsor-row">
-                    <img src="assets/img/microsoft.jpg" />
+                    <img src="assets/img/microsoft.jpg" />&nbsp;&nbsp;&nbsp;
+                    <img src="assets/img/workshops/logo-dark.png" />
                   </div>
-                </div><div class="sponsor-category">
+                </div>
+                <div class="sponsor-category">
                   <h2>Workshop Partner</h2>
                   <div class="sponsor-row">
                     <img src="assets/img/workshops/vanhaa.png" />
