--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -114,7 +114,8 @@
           Sponsors</h2><br>
         <div class="sponsor-row">
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
-            src="../assets/img/microsoft.jpg">
+            src="../assets/img/microsoft.jpg"><br><br><br>
+            <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);" src="../assets/img/workshops/logo-dark.png">
         </div><br>
       </div>
       <br>
