--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
                   <h2>Silver Sponsors</h2>
                   <div class="sponsor-row">
                     <img src="assets/img/microsoft.jpg" />&nbsp;&nbsp;&nbsp;
-                    <img src="assets/img/workshops/logo-dark.png" />
+                    <img src="https://read-the-docs-guidelines.readthedocs-hosted.com/_images/logo-wordmark-dark.png" />
                   </div>
                 </div>
                 <div class="sponsor-category">
