--- a/mobile/sponsors.html
+++ b/mobile/sponsors.html
@@ -115,7 +115,7 @@
         <div class="sponsor-row">
           <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);"
             src="../assets/img/microsoft.jpg"><br><br><br>
-            <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);" src="../assets/img/workshops/logo-dark.png">
+            <img style="width: 50%; position: relative;left: 50%;transform: translate(-50%);" src="https://read-the-docs-guidelines.readthedocs-hosted.com/_images/logo-wordmark-dark.png">
         </div><br>
       </div>
       <br>
